--- a/blackJack.css
+++ b/blackJack.css
@@ -25,14 +25,19 @@ h1{
 .start{
     width: 125px;
     height: 20px;
+    border-radius: 50%;
+    margin-right: 15px;
 }
 .hit{
     width: 125px;
     height: 20px;
+    border-radius: 50%;
+    margin-right: 15px;
 }
 .stay{
     width: 125px;
     height: 20px;
+    border-radius: 50%;
 }
 .dealerScore{
     margin-left: 50px;
@@ -45,4 +50,7 @@ h1{
 }
 .cards{
     margin-bottom: 30px;
+}
+.pic{
+    border-radius: 50%;
 }
