--- a/blackJack.css
+++ b/blackJack.css
@@ -27,6 +27,7 @@ h1{
     height: 20px;
     border-radius: 50%;
     margin-right: 15px;
+    margin-left: -70px;
 }
 .hit{
     width: 125px;
@@ -53,6 +54,7 @@ h1{
 }
 .pic{
     border-radius: 50%;
+    margin-left: -30px;
 }
 .refresh{
     width: 125px;
